# multi-language-projects

./: README.md
Go/: README.md
bash/: README.md
c/: README.md
c#/: README.md
c++/: README.md
elixir/: README.md
haskell/: README.md
java/: README.md
javascript/: README.md
lua/: README.md
mojo/: README.md
php/: README.md
python/: .gitignore  LICENSE  README.md  pyproject.toml
python/expense_tracker/: cli.py  core.py  main.py
r/: README.md
ruby/: README.md
rust/: README.md
typescript/: README.md
zig/: README.md
